# MsgServerQt

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  conanfile.py  mainClient.cpp  mainServer.cpp
.github/workflows/: checkerPipeline.yml  cmake-single-platform.yml
client/: CMakeLists.txt  chatPreviewModel.cpp  chatViewModel.cpp  client.cpp  clientApp.cpp  clientMessageBuilder.cpp  communicators.cpp  messageModelItem.cpp  rawMessageProcessor.cpp  tcpClientConnector.cpp
client/include/: chatPreviewModel.h  chatViewModel.h  client.h  clientApp.h  clientIface.h  clientMessageBuilder.h  communicators.h  messageModelItem.h  rawMessageProcessor.h  tcpClientConnector.h
client/qml/: CMakeLists.txt  ChatPreview.qml  ChatPreviewList.qml  ChatView.qml  Client.qml  ClientView.qml  GradientText.qml  Message.qml  clientConnfiguration.qml  mask.frag
common/: CMakeLists.txt  appGui.cpp  chat.cpp  chatGui.cpp  configParser.cpp  message.cpp
common/include/: appGui.h  chat.h  chatGui.h  configParser.h  message.h  participant.h  uniqueKeysTypedef.h
common/qml/: CMakeLists.txt  Chat.qml  Constants.qml
communication/: CMakeLists.txt  communication.h  communicator.h
communication/proto/: clientMsgFormats.proto  serverClientCommunication.proto  serverMsgFormats.proto
connConfigurator/: CMakeLists.txt  connConfigFile.cpp  connConfigGraphic.cpp
connConfigurator/include/: connConfigFile.h  connConfigGraphic.h  connConfigurator.h
scripts/: run-clang-format.sh  run-clang-tidy.py
server/: CMakeLists.txt  chat.cpp  chatParticipantsOrganizer.cpp  clientThread.cpp  clientThreadWorker.cpp  messengerCommunicator.cpp  rawClientMessageProcessor.cpp  server.cpp  serverApp.cpp  serverCommunicator.cpp  serverMessageBuilder.cpp  serverParticipant.cpp  tcpserver.cpp
server/include/: chat.h  chatParticipantsOrganizer.h  clientOrganizer.h  clientThread.h  clientThreadIface.h  clientThreadWorker.h  communicators.h  message.h  participant.h  rawClientMessageProcessor.h  server.h  serverApp.h  serverIface.h  serverMessageBuilder.h  serverParticipant.h  tcpserver.h  uniqueKey.h
test/: CMakeLists.txt
test/client/: buildServerCmd.cpp  buildServerCmd.h  clientCommunicatorTest.cpp  clientTest.cpp  testClientMessageBuilder.cpp  testRawMessageProcessor.cpp
test/common/: chatTest.cpp  messageTest.cpp  participantTest.cpp
test/server/: buildClientCmd.cpp  buildClientCmd.h  serverCommunicatorTest.cpp  testRawMessageProcessor.cpp  testServerMessageBuilder.cpp
test/utils/: buildClientCmd.cpp  buildServerCmd.cpp
test/utils/include/: buildClientCmd.h  buildServerCmd.h
